<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_expense_card_view_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.industries.shins.myexpenses.activity.ExpenseCardViewDetails"
    tools:showIn="@layout/activity_expense_card_view_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_expense_title"
            android:textSize="25sp"
            android:layout_gravity="right"/>

        <!--> LABEL <-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_label_title"
                style="@style/AppTheme.addExpenseTitles" />

            <EditText
                android:id="@+id/detail_expense_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!--> CATEGORY <-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_category_title"
                style="@style/AppTheme.addExpenseTitles"/>

            <Spinner
                android:id="@+id/detail_expense_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/expense_category">

            </Spinner>
        </LinearLayout>

        <!--> COST <-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_cost_title"
                style="@style/AppTheme.addExpenseTitles"/>

            <EditText
                android:id="@+id/detail_expense_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <!--> PAID <-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_paid_title"
                style="@style/AppTheme.addExpenseTitles"/>

            <CheckBox
                android:id="@+id/detail_expense_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!--> DATE <-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_date_title"
                style="@style/AppTheme.addExpenseTitles"/>

            <Button
                android:id="@+id/detail_expense_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/expense_category">

            </Button>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <Button
                android:id="@+id/detail_expense_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_delete_title"
                android:layout_weight="1"
                style="@style/AppTheme.ButtonDelete"/>

            <Button
                android:id="@+id/detail_expense_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_confirm_title"
                android:layout_weight="1"
                style="@style/AppTheme.Button"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
